--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,8 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "api/index.py"
+      "src": "/.*",
+      "dest": "index.py"
     }
   ]
 }
